deploymentservice2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2-deployment
  labels:
    app: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: aca2255/netstar:nginx2
        ports:
        - containerPort: 80



---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
spec:
  type: ClusterIP
  selector:
    app: nginx2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
